--- a/css/blog/style-funtome-blog-str-first.css
+++ b/css/blog/style-funtome-blog-str-first.css
@@ -18,7 +18,7 @@
 
 
 .news-blog-first {
-    margin: 75px 0 29px 0;
+    margin: 159px 0 29px 0;
 }
 
 .news-data {
@@ -168,7 +168,7 @@ input::placeholder {
     border-radius: 3px;
 }
 
-button[type="submit"] {
+.search {
     margin-top: 4px;
     padding: 0 0;
     width: 28px;
@@ -290,6 +290,7 @@ button[type="submit"] {
 /* Section-comments */
 
 .section-comments {
+    position: relative;
     margin-bottom: 100px;
 }
 
@@ -461,7 +462,6 @@ button[type="submit"] {
     align-items: center;
     text-transform: uppercase;
     border: 2px solid #EAEAEA;
-    z-index: 1000;
 }
 
 .butt-border-text {
@@ -569,4 +569,186 @@ button[type="submit"] {
     color:  #1FB14D;
 }
 
+
+/* User form */
+
+.form {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 860px;
+    max-width: 100%;
+    height: auto;
+    padding: 20px 30px;
+    box-shadow: 0px 0px 4px #DCDCDC;
+    border-radius: 18px;
+    background-color: #FFFFFF;
+    display: none;
+}
+
+.form.active {
+    display: block;
+}
+
+.modal {
+    position: fixed;
+    z-index: 100;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 50px;
+    
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 150%;
+    color: #5E6973;
+}
+
+.block {
+    display: flex;
+    margin-top: 14px;
+    margin-bottom: 45px;
+}
+
+.block-text {
+    margin-right: 61px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    color: #333333;
+}
+
+.form-iteam {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+.form-first-block {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.form-flex {
+    margin-bottom: 20px;
+}
+
+.form-flex__mail,
+.form-flex__password {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 420px;
+    padding: 14px;
+    border: 1px solid rgba(94, 105, 115, 0.3);
+    border-radius: 6px;
+    margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 135%;
+    color: #333333;
+}
+
+.form-iteam {
+    width: 356px;
+    border: none;
+    outline: none;
+
+}
+
+.butt-form {
+    margin-top: 2px;
+    padding: 0 0;
+    width: 21px;
+    height: 14px;
+    border: none;
+    background-size: 100%;
+    background-image: url(/img/funtome-blog/view-password.svg);
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
+.consent {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.consent-text {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.text-link {
+    color: #465B6F;
+    text-decoration: underline;
+
+}
+
+input[type=checkbox] {display: none;}
+
+input[type=checkbox] + label:before {
+    content: "\2714";
+    color: transparent;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 900;
+    margin-right: 10px;
+    text-align: center;
+    vertical-align: middle;
+    transition: color ease .3s;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #ACACAC;
+    border-radius: 2px;
+}
+
+input[type=checkbox]:checked + label:before {
+    color: #0A9135;
+    border-color: #ACACAC;
+}
+
+.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.block-text a {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    color: #199C3D;
+}
+
+.form_bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.6);
+    z-index: 99;
+    display: none;
+}
 
