--- a/css/home/style.css
+++ b/css/home/style.css
@@ -192,7 +192,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 99;
 }
 
 .border-header {
@@ -395,7 +395,7 @@ a {
 
 .content-title {
   position: relative;
-  margin-bottom: 38px;
+  margin-bottom: 49px;
 }
 
 .h1-ru {
@@ -443,7 +443,7 @@ a {
 }
 
 .text-red {
-  color: #F02B53;
+  color: #FD4B6F;
   font-weight: bold;
 }
 
