--- a/css/blog/style-funtome-blog-str-first.css
+++ b/css/blog/style-funtome-blog-str-first.css
@@ -257,7 +257,7 @@ input::placeholder {
 
 .nav-categories-blok li::after {
     content: "";
-    width: 398px;
+    width: 300px;
     height: 1px;
     background: #F7F7F7;
     position: absolute;
@@ -369,7 +369,7 @@ input::placeholder {
 }
 
 .block-comments {
-    display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: space-between;
     
@@ -389,6 +389,7 @@ input::placeholder {
     font-size: 24px;
     line-height: 28px;
     color: #C87283;
+    margin-right: 30px;
 }
 
 .data {
@@ -408,7 +409,7 @@ input::placeholder {
     font-size: 20px;
     line-height: 135%;
     color: #333333;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 
 }
 
@@ -419,7 +420,7 @@ input::placeholder {
     font-size: 16px;
     line-height: 19px;
     color: #888888;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     display: block;
     width: 100%;
 }
@@ -428,18 +429,32 @@ input::placeholder {
     display: flex;
 }
 
+.user-photo-replay {
+    margin-right: 20px;
+}
+
+.user-photo {
+    margin-right: 20px;
+}
+
 .form-replay {
     display: none;
 }
 
 .replay-comments {
+    width: 100%;
     margin-bottom: 10px;
 }
 
+.replay-comments textarea {
+    resize: vertical;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .replay-form {
+    width: 100%;
     max-width: 100%;
-    width: 886px;
-    height: 40px;
     padding: 14px 17px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -450,6 +465,34 @@ input::placeholder {
     border: 1px solid rgba(94, 105, 115, 0.3);
     border-radius: 4px;
     
+}
+
+.replay-comments-block {
+    width: 100%;
+}
+
+.open {
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.arrow-next::before {
+    margin-left: 0;
+}
+
+.answers-text {
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 27px;
+    color: #27AE60;
+}
+
+/* Replay text */
+
+.replay-text {
+    display: flex;
 }
 
 /* Replay button */
@@ -525,13 +568,22 @@ input::placeholder {
 
 }
 
+.group-user-message {
+    width: 100%;
+}
+
 .user-form-text {
     margin-bottom: 30px;
 }
 
+.user-form-text textarea {
+    width: 100%;
+    resize: vertical;
+}
+
 .user-from-text-style {
-    width: 860px;
-    height: 260px;
+    /* width: 860px;
+    height: 260px; */
     padding: 13px 15px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -681,7 +733,6 @@ input::placeholder {
 }
 
 .butt-form {
-    margin-top: 2px;
     padding: 0 0;
     width: 21px;
     height: 14px;
@@ -689,7 +740,15 @@ input::placeholder {
     background-size: 100%;
     background-image: url(/img/funtome-blog/view-password.svg);
     background-repeat: no-repeat;
+    background-position: center;
     background-color: transparent;
+}
+
+.butt-form.view {
+    margin: 0;
+    background-image: url(/img/funtome-blog/no-view.svg);
+    background-repeat: no-repeat;
+   
 }
 
 .consent {
