--- a/css/blog/media-style-funtome-blog-str-first.css
+++ b/css/blog/media-style-funtome-blog-str-first.css
@@ -1,3 +1,254 @@
+@media screen and (min-width: 1921px) {
 
+    
+
+}
+
+@media screen and (max-width: 1280px) {
+
+    .burger__item,
+    .burger__item:before,
+    .burger__item:after {
+        background-color: #5E6973;
+    }
+
+    .banner-news {
+        height: 432px;
+        background-image: url('/img/funtome-blog/banner_news_tabl.jpg');
+    }
+
+    .news-blog-first {
+        margin: 122px 0 30px 0;
+    }
+    
+    .news-data {
+        justify-content: space-between;
+        margin-bottom: 55px;
+    }
+
+    .news-data-name {
+        font-size: 22px;
+        margin-right: 0;
+    } 
+
+    .news-name-title {
+        font-size: 40px;
+        margin-bottom: 40px;
+    }
+
+    .news-like-view {
+        margin-bottom: 20px;
+    }
+
+    .news-like-social {
+        flex-direction: column;
+    }
+
+    /* Text-content */
+
+    .text-content {
+        flex-direction: column;
+        margin-bottom: 90px;
+    }
+
+    .news-content {
+        width: 100%;
+        margin-bottom: 90px;
+    }
+
+    .news-title {
+        font-size: 22px;
+    }
+
+    .news-subtitle {
+        font-size: 22px;
+    }
+    
+    .photo-str-1 {
+        width: 100vw;
+        max-width: 100vw;
+        margin-left: -20px;
+    }
+
+    /* News bar */
+
+    .news-bar {
+        margin-left: 0;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .input-search {
+        width: 100%;
+        border: 1px solid rgba(94, 105, 115, 0.2);
+    } 
+
+    .box-block {
+        display: flex;
+    } 
+
+    .blok-categories {
+        margin-top: 0;
+    }
+
+    .blok-article {
+        width: 45%;
+        margin-right: 60px;
+    }
+
+    .nav-categories {
+        margin-bottom: 53px;
+    }
+
+    /* Section comments */
+
+    .title-comments-style {
+        font-size: 40px;
+    }
+
+    .user-text {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    .icon-social {
+        display: none;
+    }
+
+    .banner-news {
+        height: 240px;
+        background-image: url('/img/funtome-blog/banner_news_mob.jpg');
+    }
+
+    .news-blog-first {
+        margin: 89px 0 20px 0;
+    }
+    
+    .news-data {
+        margin-bottom: 25px;
+    }
+
+    .news-data-name {
+        font-size: 17px;
+    }
+    
+    .news-data-data {
+        font-size: 16px;
+    }
+
+    .news-name-title {
+        font-size: 30px;
+        margin-bottom: 40px;
+    }
+
+    .news-name-title br {
+        display: none;
+    }
+
+    .viwe-number {
+        font-size: 16px;
+    }
+
+    .news-social-syle {
+        width: 45px;
+        margin-right: 7px;
+    }
+
+    .news-social-syle:last-child {
+        margin-right: 0;
+    }
+
+    /* Text-content */
+
+    .text-content {
+        margin-bottom: 65px;
+    }
+
+    .news-content {
+        margin-bottom: 70px;
+    }
+
+    .news-title,
+    .news-subtitle {
+        font-size: 17px;
+    }
+
+    /* News bar */
+
+    .box-block {
+        flex-direction: column;
+    }
+
+    .blok-categories {
+        margin-top: 20px;
+    }
+
+    .blok-article {
+        width: 100%;
+        margin-right: 60px;
+    }
+
+    .nav-categories {
+        margin-bottom: 40px;
+    }
+
+    /* Section comments */
+
+    .title-comments-style {
+        font-size: 30px;
+    }
+
+    .user-text {
+        font-size: 15px;
+    }
+
+    .name {
+        font-size: 18px;
+    }
+
+    .data {
+        font-size: 14px;
+    }
+
+    .mr20 {
+        margin-right: 10px;
+    }
+
+    .button-mess {
+        display: none;
+    }
+
+    /* Comments Form */
+
+    .comments-text {
+        font-size: 17px;
+        margin-bottom: 10px;
+    }
+
+    .sing-in-text {
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .form-border {
+        padding: 15px 20px;
+    }
+
+    .form-title {
+        width: 100%;
+        font-size: 17px;
+        text-align: center;
+    }
+
+    .user-form-text {
+        margin-bottom: 0;
+    }
+
+    .user-replay span {
+        font-size: 14px;
+    }
+}
 
 
