--- a/css/home/media-style.css
+++ b/css/home/media-style.css
@@ -277,6 +277,11 @@
 
 @media screen and (max-width: 767px) {
 
+    .container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
     .intro-container .box-intro {
         margin-left: 0;
         width: 100%;
