--- a/css/support/style-funtome-support.css
+++ b/css/support/style-funtome-support.css
@@ -21,6 +21,8 @@
 }
 
 .support-block {
+    width: 100%;
+    max-width: 860px;
     margin-top: 30px;
     margin-bottom: 200px;
     display: flex;
@@ -59,7 +61,7 @@
 }
 
 .select .select-input {
-    width: 860px;
+    width: 100%;
     height: 52px;
     padding: 10px 15px;
     font-family: 'Roboto', sans-serif;
@@ -75,6 +77,7 @@
 
 .select .current {
     position: relative;
+    margin: 0 auto;
     color: #000;
     border-radius: 6px;
 }
@@ -112,15 +115,17 @@
 }
 
 .support-window {
+    width: 100%;
     margin-top: 30px;
 }
 
 .user-form-text {
+    width: 100%;
     margin-bottom: 30px;
 }
 
 .user-from-text-style {
-    width: 860px;
+    width: 100%;
     height: 260px;
     padding: 13px 15px;
     font-family: 'Roboto', sans-serif;
@@ -160,13 +165,14 @@
 .support-data {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .input-support-style {
     width: 420px;
     height: 53px;
     padding: 14px 16px;
+    margin-right: 20px;
     border: 1px solid rgba(94, 105, 115, 0.3);
     box-sizing: border-box;
     border-radius: 6px;
@@ -176,6 +182,10 @@
     font-size: 20px;
     line-height: 135%;
     color: #333333;
+}
+
+.input-support-style:last-child {
+    margin-right: 0;
 }
 
 input::placeholder {
