--- a/css/blog/media-style-funtome-blog-str-first.css
+++ b/css/blog/media-style-funtome-blog-str-first.css
@@ -206,14 +206,11 @@
 
     .name {
         font-size: 18px;
+        margin-right: 20px;
     }
 
     .data {
         font-size: 14px;
-    }
-
-    .mr20 {
-        margin-right: 10px;
     }
 
     /* Comments Form */
@@ -286,13 +283,19 @@
     }
     
     .user-photo {
-        width: 100px;
+        width: 80px;
         height: 80px;
+        margin-right: 10px;
+    }
+
+    .block-comments {
+        width: calc(100% - 90px);
     }
 
     .user-photo-replay {
         width: 50px;
         height: 50px;
+        margin-right: 9px;
     }
 
     .open-replay-text .replay-text {
@@ -308,6 +311,84 @@
     .replay-form {
         padding: 9px 10px;
     }
+
+    .user-replay {
+        width: calc(100% - 91px);
+        margin-left: auto;
+    }
+
+    .block-replay {
+        width: 100%;
+    }
+
+    .box-flex {
+        flex-direction: column;
+    }
+
+    .box-flex-container {
+        display: flex;
+        width: calc(100% - 91px);
+        margin-left: auto;
+    }
+
+    .replay-comments-block {
+        width: calc(100% - 59px);
+    }
+
+    .butt-border {
+        margin-right: 10px;
+        width: calc((100% - 10px)/2);
+    }
+
+    .butt-border:last-child {
+        margin-right: 0;
+    }
+
+    .block-replay .block-replay {
+        width: 100%;
+    }
+
+    .block-replay .block-replay .box-flex-container {
+        width: calc(100% - 59px);
+    }
+
+    .block-replay .block-replay .user-replay {
+        width: calc(100% - 59px);
+    }
+
+
+}
+
+
+
+@media screen and (max-width: 359px) {
+    .select .select-input {
+        font-size: 13px;
+    }
+
+    .name {
+        font-size: 16px;
+        margin-right: 15px;
+    }
+
+    .answers-text {
+        font-size: 20px;
+    } 
+
+    .block-replay .block-replay {
+        width: 100%;
+    }
+
+    .box-flex-container {
+        width: 100%;
+    }
+
+    .box-flex-container {
+        width: calc(100% - 90px);
+    }
+
+
+    
 }
 
 
