--- a/css/home/media-style.css
+++ b/css/home/media-style.css
@@ -68,6 +68,26 @@
 
     .nav {
         display: none;
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+
+    .nav.show {
+        display: block;
+    }
+
+    .nav-list {
+        width: 100%;
+        background-color:#465B6F;
+        flex-direction: column;
+        align-items: flex-start;
+        border-radius: 0 0 30px 30px;
+    }
+
+    .link-home {
+        padding: 29px 20px 48px;
     }
 
     .logo {
@@ -509,15 +529,6 @@
     }
 
 }
-
-
-
-
-
-
-
-
-
 
 
 
