--- a/css/paki/style-funtome-paki.css
+++ b/css/paki/style-funtome-paki.css
@@ -136,6 +136,8 @@ button[type="submit"] {
     height: 55px;
     display: block;
     background-image: url(/img/funtome-paki/paki-list.svg);
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     margin-right: 20px;
     cursor: pointer;
@@ -146,11 +148,13 @@ button[type="submit"] {
 }
 
 .paki-tabl {
-    width: 55px;
+    width: 56px;
     height: 55px;
     display: block;
     background-image: url(/img/funtome-paki/paki-tabl.svg);
+    background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     cursor: pointer;
 }
 
@@ -183,7 +187,7 @@ button[type="submit"] {
 
 .svg-style {
     filter: drop-shadow(0px 0px 5px rgba(98, 98, 98, 0.3));
-    margin-left: -8px;
+    margin-left: -4px;
     width: 290px;
     height: 300px;
     border-radius: 8px;
